[package]
name = "msdf-sys"
version = "0.1.1"
edition = "2021"
repository = "https://github.com/penple/msdf-rs/"
license = "MIT"
keywords = ["sdf", "font", "text", "gamedev", "graphics"]
categories = ["graphics", "rendering::data-formats"]
description = "Unsafe msdfgen bindings for Rust"
exclude = [
    "test_resources/*",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
cmake = "0.1.48"
bindgen = "0.69.4"
fs_extra = "1.2.0"

[dev-dependencies]
ttf-parser = "0.20.0"
image = "0.25.1"